# moe-scaling

./: AUTHORS  README.md
notebook/: .gitignore  README.md  justfile  moe-scaling-law.ipynb  pyproject.toml  scaling.py
notebook/.ipynb_checkpoints/: moe-scaling-law-checkpoint.ipynb
paper/: scaling.tex
